log
Fri 19 Aug 2022 04:35:01 PM UTC: 
 tests:  0|6
total_score: 0/70
5307fce
Fri 19 Aug 2022 04:39:53 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
230e64a
Fri 19 Aug 2022 04:50:21 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:11: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   37 |   if(!list->firstList) return NULL;
      |           ^~
list.c:38:19: error: ‘List’ {aka ‘struct List’} has no member named ‘firsList’
   38 | list->current=list->firsList;
      |                   ^~
list.c:39:15: error: ‘List’ {aka ‘struct List’} has no member named ‘firstLista’
   39 |   return (list->firstLista->data);
      |               ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1e65f24
Fri 19 Aug 2022 04:50:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:11: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   37 |   if(!list->firstList) return NULL;
      |           ^~
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘firsList’
   38 |   list->current=list->firsList;
      |                     ^~
list.c:39:15: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   39 |   return (list->firstList->data);
      |               ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e67a106
Fri 19 Aug 2022 04:51:52 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b3a934b
Fri 19 Aug 2022 04:52:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1db250d
